--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,24 +1,3 @@
-.container{
-    margin-left: 10%;
-    margin-top: 1%;
-    margin-right: 10%;
-    background-color: white;
-    padding: 5px;
-}
-
-.title{
-    background-color: #8ac04b;
-    color: white;
-    font-weight: bold;
-    margin: 4px;
-}
-
-.title h1{
-    margin: auto;
-    display: flex;
-    justify-content: center;
-}
-
 .filter{
     display: flex;
     justify-content: center;
@@ -67,9 +46,10 @@ a:link{
 }
 
 .step-links a{
-    color: #73c2a1;
+    color: #8ac04b;
     padding: 2px;
     font-weight: bold;
+    font-size: larger;
 }
 
 .step-links a:active{
@@ -77,7 +57,7 @@ a:link{
 }
 
 .step-links a:hover{
-    color: #8ac04b;
+    color: #5312d5;
 }
 
 span .current{
