--- a/templates/base.html
+++ b/templates/base.html
@@ -11,12 +11,18 @@
     {% block link %} {% endblock %}
 </head>
 <body>
-<div class="topnav">
-    <a href="">NepSense</a>
-    <a href="{% url 'shareprice' %} ">Todays Share Price</a>
-    <a href="">About</a>
+<div class="container">
+    <div class="topnav">
+        <a href="">NepSense</a>
+        <a href="{% url 'shareprice' %}">Todays Share Price</a>
+        <a href="">About</a>
+    </div>
+    <div class="title">
+        <h1>{% block pagetitle %}{% endblock %}</h1>
+    </div>
+    {% block content %}
+    {% endblock %}  
 </div>
-{% block content %}
-{% endblock %}    
+  
 </body>
 </html>
