--- a/templates/shareprice.html
+++ b/templates/shareprice.html
@@ -5,11 +5,11 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
 {% endblock %}
 
+{% block pagetitle %}
+Today's Share Price
+{% endblock %}
+
 {% block content %}
-<div class="container">
-    <div class="title">
-        <h1>Today's Share Price</h1>
-    </div>
     <div class="filter">
         <form method="GET" action="{% url 'shareprice filter' %}">
             <label for="company">Company</label>
@@ -73,6 +73,5 @@
         {% endif %}
         </span>
     </div>
-</div>
 <script src="{% static 'js/script.js' %}"></script>
 {% endblock %}
